# jobs-radar

./: .env.example  .gitignore  README.md  pyproject.toml
jobs_radar/: cli.py  config.py  feedback.py  llm.py  main.py  models.py  pipeline.py  ui.py  vector_store.py
